# flask_toy

./: .env.dev  .gitignore  .pylintrc  .testmondata  Dockerfile  Makefile  Pipfile  README.md  README.txt  alembic.ini  color_dict.py  colors.py  colors_get.yml  colors_post.yml  db_file.db  docker-compose.yml  main.py  my.py  pra_re.py  practice_async.py  pyproject.toml  pytest.ini  readme.txt  requirements.txt  todo.txt
alembic/: env.py
alembic/versions/: 508806fac224_first.py  7fa35b0e4d6f_please.py  d27c50be590b_please_2.py
app_docker/: Dockerfile
database/versions/: 6e40e406f9be_toy.py
design_pattern/: abstract_factory.py  adapter.py  builder.py  builder_with_director.py  decorator.py  facade.py  factory.py  prototype.py
docker/: app.py  docker-compose.yml  docker_compose.txt  pyproject.toml  red.py
docker/docker/: Dockerfile-dev  Dockerfile-ver
docker/scripts/: delete.sh
flask_toy/: pyproject.toml
flask_toy/tests/: test_flask_toy.py  test_show_warnings.py  test_skip.py
lambda/: controller.py  run.py
migrations/versions/: 1ea02939a651_.py  b2c8959e9054_.py  dd6289221355_.py
nginx/: nginx.conf
nginx_with_docker/flask/: requirements.txt
server/: README.txt  app.py  docker-compose.yml  main.py
server/application/: app.py
server/docker/: Dockerfile
server_poetry/: docker-compose.yml  main.py  pyproject.toml
server_poetry/application/: __init__.py
server_poetry/docker/: Dockerfile
shell_script/: first.sh  install.sh  script.sh  set.sh  util.sh
small_app/: conf.ini  connecter.py  custom_element.py  reason.txt  sample.py  sumgo_worker.py  sumgo_worker_re.py
small_app/base/: base_worker.py
small_app/dataclass/: user_data.py
small_app/utils/: custom_logger.py
sql/: init.sql
src/: __init__.py  config.py  database.py  pytest.ini
src/domain/: __init__.py
src/model/: models.py
src/swagger/: colors_.py  index.py  language.py
src/tests/: conftest.py  test_adv_basic.py  test_daum.py  test_db.py  test_factory.py  test_fixture.py  test_kakao_api_handler.py  test_main.py  test_models.py  test_publish_article.py  test_related_model.py
tests/: conftest.py  test_app.py  test_factory.py  test_flask_dev.py  test_http_mock.py  test_main.py  test_models.py
tests/basic/: test_skip.py  test_warning.py
tests/domain/: test_api.py  test_todo.py
tests/factory/: factories.py
tests/features/: action.feature  cucumbers.feature  readme.txt  service.feature  (+8 more)
(+44 files in other folders)
