[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["matthew <matthew@cupist.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pytest = "^5.4.1"
pytest-testmon = "^1.0.2"
pytest-watch = "^4.2.0"
faker = "^4.0.3"
flasgger = "^0.9.4"
codetiming = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
