[tool.poetry]
name = "flask_toy"
version = "0.1.0"
description = ""
authors = ["matthew <matthew@cupist.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flasgger = "^0.9.4"
flask_sqlalchemy = "^2.4.1"
mysql-connector-python = "^8.0.19"
flask_migrate = "^2.5.3"
pytest = "^5.4.1"
allure-pytest = "^2.8.13"
pytest-xdist = "^1.32.0"
pytest-cov = "^2.8.1"
pysqlite3 = "^0.4.2"
Flask-API = "^2.0"
flask-jwt-extended = "^3.24.1"
boto3 = "^1.13.19"
zappa = "^0.51.0"
redis = "^3.5.1"
aiohttp = "^3.6.2"
uwsgi = "^2.0.19"
pytest-factoryboy = "^2.0.3"
faker = "^4.1.1"
requests = "^2.24.0"
httpretty = "^1.0.2"
sure = "^1.4.11"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.781"
pytest-bdd = "^3.4.0"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.0.3"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
